--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <button class="btn-2">Explore New Bangladesh</button>
               </div>
           <div class="div-1-2">
-         <img class="img-1" src="/Styles/hero.png">
+         <img class="img-1" src="/Styles/hero.png" alt="">
          </div>
       </section>
       <section class="sec-2">
@@ -31,20 +31,20 @@
         </div>
         <div class="div-3">
           <div class="div-3-1">
-            <img src="/Styles/card-icon.png">
+            <img src="/Styles/card-icon.png" alt="">
             <h2 class="h-2">Digital Transformation</h2>
             <p class="p-5">Digital Transformation has emerged as a pivotal force reshaping industry worldwide in today's rapidly evolving technological landscape. At its core, Digital Transformation entails the integration of cutting-edge technologies to revolutionize processes, enhance customer experiences, and drive operational efficiencies.</p>
             <button class="btn-3">Learn More</button>
           </div>
           <div class="div-3-2">
-            <img src="/Styles/card-icon.png" alt=">
+            <img src="/Styles/card-icon.png" alt="">
             <h2 class="h-2">Green Energy</h2>
             <p class="p-6">Green energy is any energy type that is generated from natural resources, such as sunlight, wind or water. It often comes from renewable energy sources although there are some differences between renewable and green energy.
               It's not only renewable but also helpful to environment.</p>
             <button class="btn-4">Learn More</button>
           </div>
           <div class="div-3-3">
-            <img src="/Styles/card-icon.png" >
+            <img src="/Styles/card-icon.png" alt="">
             <h2 class="h-2">Modern Infrastructure</h2>
             <p class="p-7">Modern Infrastructure means a long-term task to rebuild the infrastructure of a war-torn country such as Angola. The industry was accused of having invested little in workers, plant or infrastructure. The minister is responsible for the country's transport infrastructure.</p>
             <button class="btn-5">Learn More</button>
